# ultra-csm

./: .clean-docs.yml  .env.example  .gitignore  .gitleaks.toml  .gitleaksignore  .sourcebound.yml  BLOCKED.md  BLOCKED_CONTENT_ROADMAP.md  BLOCKED_MPA_A4.md  BLOCKED_MPA_A6.md  LICENSE  Makefile  QUICKSTART.md  README.md  SECURITY.md  STATUS.md  constraints.txt  llms.txt  pyproject.toml  run_verification.sh  vercel.json
.clean-docs/: audit-baseline.json
.github/: CI.md  README.md  dependabot.yml
.sourcebound/: audit-baseline.json
.writer_bakeoff_checkpoints/: writer_bakeoff_haiku.json  writer_bakeoff_sonnet.json
.writer_bakeoff_checkpoints_rerun/: writer_bakeoff_haiku.json  writer_bakeoff_sonnet.json
config/: autonomy_policy.json  precedence_config.json  trigger_config.json  value_model_config.json
docs/: A6_HARD_GOLD_LABELING_INSTRUCTIONS.md  ACTION_CONTROL_SANDBOX.md  AGENT_PROFILE.md  ARCHITECTURE.md  CAPABILITY_MAP.md  CONNECTORS.md  CONTENT_ROADMAP.md  CUSTOMER_VALUE_MODEL.md  DATA_HANDLING.md  DATA_PLANE.md  DECISION_LOG.md  DEMO.md  DEMO_EXECUTION_PLAN.md  DEPLOYMENT_READINESS.md  DEPLOYMENT_READINESS_CASE_STUDY.md  DEPLOYMENT_READINESS_FREEZE.md  DEPLOYMENT_READINESS_PREREGISTRATION.md  DEPLOYMENT_READINESS_SCORECARD.md  EVAL_PLAN.md  EVAL_STANDARD.md  EXECUTOR_HANDOFF.md  EXECUTOR_HANDOFF_LANE_E.md  EXECUTOR_HANDOFF_LANE_F.md  EXECUTOR_HANDOFF_LANE_G.md  EXECUTOR_HANDOFF_LANE_H.md  EXECUTOR_HANDOFF_LANE_I.md  EXECUTOR_HANDOFF_LANE_J.md  EXPLORER_MAPPING_CONFIG_SPEC.md  FOREIGN_CORPUS_FINDINGS.md  HANDOFF_SPIKE_SPEC.md  HOSTED_ACTION_CONTROL_RUNBOOK.md  LIMITS.md  LIVE_INTEGRATION_FINDINGS.md  MCP_MODES.md  MP_D2_WAVE1_SALVAGE_RECEIPT.md  MP_D2_WAVE2_VALIDATION_RECEIPT.md  MP_D2_WAVE3_UI_RECEIPT.md  MP_E_WAVE2_READINESS_AUDIT.md  NEXT_DISPATCH.md  NONDETERMINISM_EVAL_HARDENING_SPEC.md  (+100 more)
ui/: .gitignore  (+5 more)
(+1073 files in other folders)
