[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ultra-csm"
version = "0.0.0"
description = "Ultra CSM — eval-first customer-success agent: one governed value model with thin agent-lenses over it"
requires-python = ">=3.10"
license = "Apache-2.0"
dependencies = [
    "psycopg[binary]>=3.2",
]

[project.scripts]
ucsm = "ultra_csm.cli:main"

[project.optional-dependencies]
api = ["fastapi>=0.115", "uvicorn[standard]>=0.30"]
mcp = ["mcp>=1.0"]
dev = ["pytest>=8", "ruff>=0.6", "httpx>=0.27", "jsonschema>=4.23"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100

[tool.ruff.lint.per-file-ignores]
# pytest fixtures are imported into test modules and used as parameters; ruff reads
# the parameter as a redefinition of the import (F811). That is the intended idiom.
"tests/**" = ["F811"]

[tool.pytest.ini_options]
# pythonpath over editable install: dodges the macOS/3.14 editable .pth hazard
# so tests import from src/ deterministically.
pythonpath = ["src", "."]
testpaths = ["tests"]
